objects/BMCServiceDesk__Suggested_Owner_Mapping_Criteria__c.object
<CustomObject>
    <description>This object will capture Suggested staff / queue mapping criterias</description>
    <fields>
        <fullName>BMCServiceDesk__FKSuggested_Owner_Mapping__c</fullName>
        <label>Suggested Owner Mapping</label>
        <referenceTo>BMCServiceDesk__Suggested_Owner_Mapping__c</referenceTo>
        <relationshipLabel>Suggested Owner Mapping Criterias</relationshipLabel>
        <relationshipName>Suggested_Owner_Mapping_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Info__c</fullName>
        <label>Field Info</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Grouping_Operator__c</fullName>
        <description>This field stores Logical Operators (1 for AND, 0 for OR).</description>
        <label>Grouping Operator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operand__c</fullName>
        <label>Operand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operator__c</fullName>
        <label>Operator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order_Index__c</fullName>
        <label>Order Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Suggested Owner Mapping Criteria</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Suggested Owner Mapping Criteria #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Owner Mapping Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>